# muminst-server-rs

./: .dockerignore  .env.example  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  fly.toml
.github/workflows/: codeql-analysis.yml  main.yml  pr.yml
kubernetes/: deployment.yaml  destination-rule.yaml  pvc.yaml  service.yaml  virtual-service.yaml
migrations/2021-10-31-142001_create_sounds/: down.sql  up.sql
migrations/2021-10-31-142923_create_tags/: up.sql
migrations/2022-02-13-190056_enable_foreign_key_enforcement/: up.sql
src/: actions.rs  app_state.rs  discord.rs  handlers.rs  lock.rs  main.rs  models.rs  schema.rs  storage.rs  websocket.rs
src/actions/: fs.rs  sounds.rs  tags.rs
src/discord/: actor.rs  commands.rs
src/handlers/: add_tags.rs  index.rs  play_sound.rs  sounds.rs  upload.rs
src/lock/: lock_actor.rs  messages.rs
src/websocket/: sound_lock.rs  sound_lock_handler.rs
