[package]
name = "muminst-rust-server"
version = "0.1.0"
edition = "2018"

[dependencies]
songbird = {version = "0.2.0"}
dotenv = {version = "0.15.0"}
tokio = {version = "1.9.0", features = ["full"]}
lazy_static = "1.4.0"
serde = "1.0.130"
serde_json = "1.0.68"
actix-web = "4.0.0-beta.8"
actix-cors = "0.6.0-beta.3"
actix-files = "0.6.0-beta.8"
actix-multipart = "0.4.0-beta.7"
diesel = { version = "1.4.4", features = ["sqlite"] }
diesel_migrations = "1.4.0"
uuid = { version = "0.8", features = ["v4"] }
infer = "0.5.0"

[dependencies.serenity]
default-features = false
features = [
    "client",
    "gateway",
    "model",
    "rustls_backend",
    "standard_framework",
    "voice",
    "cache",
]
version = "0.10.9"
