[package]
name = "muminst-rust-server"
version = "0.1.0"
edition = "2018"

[dependencies]
songbird = {version = "0.2.0"}
log = "0.4.14"
env_logger = "0.9.0"
dotenv = {version = "0.15.0"}
tokio = {version = "1.9.0", features = ["full"]}
lazy_static = "1.4.0"
serde = "1.0.130"
serde_json = "1.0.68"
actix = "0.12.0"
actix-web = "4.0.0-rc.3"
actix-cors = "0.6.0-beta.10"
actix-files = "0.6.0-beta.16"
actix-multipart = "0.4.0-beta.13"
actix-web-actors = "4.0.0-beta.12"
diesel = { version = "1.4.4", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.4.0"
uuid = { version = "0.8", features = ["v4"] }
infer = "0.5.0"
sha256 = "1.0.3"

[dependencies.serenity]
default-features = false
features = [
    "client",
    "gateway",
    "model",
    "rustls_backend",
    "standard_framework",
    "voice",
    "cache",
]
version = "0.10.9"
