[package]
name = "muminst-rust-server"
version = "0.1.0"
edition = "2018"

[dependencies]
songbird = "0.2.2"
log = "0.4.14"
env_logger = "0.9.0"
dotenv = "0.15.0"
tokio = {version = "1.17.0", features = ["full"]}
reqwest = "0.11.10"
teloxide = { version = "0.12", features = ["macros", "auto-send"] }
serde = "1.0.136"
serde_json = "1.0.79"
actix = "0.13.0"
actix-web = "4.0.1"
actix-cors = "0.6.1"
actix-files = "0.6.0"
actix-multipart = "0.4.0"
actix-web-actors = "4.1.0"
actix-broker = "0.4.2"
diesel = { version = "1.4.4", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.4.0"
uuid = { version = "0.8", features = ["v4"] }
infer = "0.7.0"
sha256 = "1.0.3"

[dependencies.serenity]
default-features = false
features = [
    "client",
    "gateway",
    "model",
    "rustls_backend",
    "standard_framework",
    "voice",
    "cache",
]
version = "0.10.9"
